[gd_scene load_steps=13 format=2]

[ext_resource path="res://View/basicMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Xolonium_32.tres" type="DynamicFont" id=2]
[ext_resource path="res://Control/interface/returnToSelectDifficulty.gd" type="Script" id=3]
[ext_resource path="res://Control/interface/NormalModePreview.gd" type="Script" id=4]
[ext_resource path="res://Model/Labels/PlayWithBorders.tscn" type="PackedScene" id=5]
[ext_resource path="res://Starzy.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://textures/mountainView.jpg" type="Texture" id=7]
[ext_resource path="res://textures/BG.png" type="Texture" id=8]
[ext_resource path="res://textures/winter.png" type="Texture" id=9]
[ext_resource path="res://textures/graveyard.png" type="Texture" id=10]
[ext_resource path="res://textures/desert.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 6 )

[node name="World" instance=ExtResource( 1 )]
script = ExtResource( 4 )

[node name="Header" parent="TemplateScreen" index="3"]
text = "NORMAL MODE"

[node name="Background2" type="Sprite" parent="." index="1"]
position = Vector2( 511, 302 )
scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="Background2" index="0"]
margin_left = -836.0
margin_top = -603.0
margin_right = 846.0
margin_bottom = 706.0
color = Color( 0.133333, 0.411765, 0.384314, 1 )

[node name="Background3" type="Sprite" parent="." index="2"]
position = Vector2( 613, 369 )
scale = Vector2( 1.23, 0.982 )
texture = ExtResource( 8 )

[node name="ColorRect" type="ColorRect" parent="Background3" index="0"]
margin_left = -325.0
margin_top = -279.0
margin_right = 166.0
margin_bottom = 182.0
color = Color( 0.243137, 0.517647, 0.505882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background4" type="Sprite" parent="." index="3"]
scale = Vector2( 0.662806, 0.67561 )
texture = ExtResource( 9 )
centered = false

[node name="ColorRect" type="ColorRect" parent="Background4" index="0"]
anchor_left = 0.000963542
anchor_top = 0.0038107
anchor_right = 0.000963542
anchor_bottom = 0.0038107
margin_left = 338.266
margin_top = 124.597
margin_right = 1235.27
margin_bottom = 780.597
color = Color( 0.368627, 0.470588, 0.65098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background5" type="Sprite" parent="." index="4"]
scale = Vector2( 0.514326, 0.543106 )
texture = ExtResource( 10 )
centered = false

[node name="ColorRect" type="ColorRect" parent="Background5" index="0"]
margin_left = 431.0
margin_top = 176.0
margin_right = 1539.0
margin_bottom = 1005.0
color = Color( 0.152941, 0.141176, 0.141176, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background6" type="Sprite" parent="." index="5"]
scale = Vector2( 0.801069, 0.625479 )
texture = ExtResource( 11 )
centered = false

[node name="ColorRect" type="ColorRect" parent="Background6" index="0"]
margin_left = 271.0
margin_top = 152.0
margin_right = 1007.0
margin_bottom = 867.0
color = Color( 0.964844, 0.793579, 0.536682, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PlayBoard" index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -48.0
margin_right = -4.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_constants/margin_right = 50
custom_constants/margin_top = 50
custom_constants/margin_left = 50
custom_constants/margin_bottom = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PlayBoard/MarginContainer" index="0"]
margin_left = 50.0
margin_top = 50.0
margin_right = 525.0
margin_bottom = 402.0
custom_constants/separation = 20
alignment = 1

[node name="TitleContainer" type="HBoxContainer" parent="PlayBoard/MarginContainer/VBoxContainer" index="0"]
margin_top = 13.0
margin_right = 475.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WorldLabel" type="Label" parent="PlayBoard/MarginContainer/VBoxContainer/TitleContainer" index="0"]
margin_right = 120.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 2 )
text = "World: "

[node name="DifficultyLabel" type="Label" parent="PlayBoard/MarginContainer/VBoxContainer/TitleContainer" index="1"]
margin_left = 124.0
margin_right = 272.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 2 )
text = "Difficulty"

[node name="ScoreRow" type="HBoxContainer" parent="PlayBoard/MarginContainer/VBoxContainer" index="1"]
margin_top = 72.0
margin_right = 475.0
margin_bottom = 111.0
rect_pivot_offset = Vector2( 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="PlayBoard/MarginContainer/VBoxContainer/ScoreRow" index="0"]
margin_right = 106.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 2 )
text = "Score:"

[node name="StoryScore" type="Label" parent="PlayBoard/MarginContainer/VBoxContainer/ScoreRow" index="1"]
margin_left = 110.0
margin_right = 195.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 2 )
text = "7/10"

[node name="InformationLabel" type="Label" parent="PlayBoard/MarginContainer/VBoxContainer" index="2"]
margin_top = 131.0
margin_right = 475.0
margin_bottom = 170.0
custom_fonts/font = ExtResource( 2 )
text = "Information:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PassingScore" type="Label" parent="PlayBoard/MarginContainer/VBoxContainer" index="3"]
margin_top = 190.0
margin_right = 475.0
margin_bottom = 229.0
custom_fonts/font = ExtResource( 2 )
text = "Passing Score: 8/10"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" parent="PlayBoard/MarginContainer/VBoxContainer" index="4" instance=ExtResource( 5 )]
margin_top = 249.0
margin_right = 475.0
margin_bottom = 339.0

[node name="BackButton" parent="." index="7"]
script = ExtResource( 3 )

[node name="Header" type="Label" parent="." index="8"]
anchor_right = 1.0
margin_top = 16.0
margin_bottom = 85.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "NORMAL MODE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PlayBoard/MarginContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="BackButton" to="BackButton" method="_on_BackButton_pressed"]
